# adk-on-gke-tutorials

1_adk/: llama-3.1-8b-instruct.yaml
1_adk/weather_agent/: agent.py
2_adk/: llama-3.1-8b-instruct.yaml
2_adk/weather_agent/: agent_deployment.yaml
2_ray_adk/adk_agent/: Dockerfile  main.py
2_ray_adk/ray_serve_vllm/: Dockerfile
3_ray_adk/: README.md
3_ray_adk/adk_agent/: requirements.txt
3_ray_adk/adk_agent/weather_agent/: agent.py  agent_deployment.yaml
3_ray_adk/ray_serve_vllm/: ray-service.yaml  requirements.txt  serve_chat_completion.py
4_adk_ray_with_mcp/adk_agent/: Dockerfile  main.py  requirements.txt
4_adk_ray_with_mcp/adk_agent/weather_agent/: agent.py  deployment_agent.yaml
4_adk_ray_with_mcp/mcp_server/: Dockerfile  deployment_weather_mcp.yaml  requirements.txt  weather_mcp.py
4_adk_ray_with_mcp/ray_serve_vllm/: Dockerfile  ray-service.yaml
4_ray_adk_mcp/adk_mcp_app/: Dockerfile  Dockerfile.mcp_server  requirements.txt
4_ray_adk_mcp/adk_mcp_app/cocktail_chat_agent/: agent.py  deployment_agent.yaml
4_ray_adk_mcp/adk_mcp_app/mcp_server/: cocktail.py  deployment_cocktail_mcp.yaml  deployment_maps_mcp.yaml
4_ray_adk_mcp/ray_serve_vllm/: ray-service.yaml  requirements.txt  serve_chat_completion.py
code_agent/: agent.py  main.py  pyproject.toml
code_agent/k8s/: gke_sandbox_rbac.yaml  gke_sandbox_rbac_cluster.yaml  gke_sandbox_rbac_local.yaml
